@@ -19,82 +19,281 @@ This guide covers advanced and tricky Spring Boot interview questions, focusing 
 ## 1. Microservices & Communication
 
 ### Q: How would you handle inter-service communication in a microservice architecture using Spring Boot?
-**A:** * **Simple/Direct Communication:** Use `RestTemplate` (or `WebClient`) for synchronous, two-way communication where a service sends a request and waits for a response.
-* **Complex Interactions:** Use **Feign Client**. It simplifies declaring API clients, making the code much cleaner and the process more efficient when dealing with multiple services.
-* **Asynchronous Communication:** Use message brokers like **RabbitMQ** or **Kafka**. This acts like a community board where a service posts a message and other services can read and act upon it later. This is best when immediate responses are not necessary, ensuring a robust and decoupled system.
+**A:** The choice depends on the coupling and latency requirements:
+
+| Pattern | Tool | When to Use |
+|---------|------|-------------|
+| **Synchronous (request/reply)** | `WebClient` (reactive, non-blocking) | Real-time data needed; caller waits for response |
+| **Declarative sync** | `Spring Cloud OpenFeign` | Multiple downstream services; cleaner code than raw WebClient |
+| **Asynchronous (fire-and-forget)** | `Kafka`, `RabbitMQ` | Event-driven; eventual consistency acceptable |
+| **Event streaming** | `Kafka Streams` | Continuous data processing pipelines |
+
+> **`RestTemplate` is deprecated** (maintenance mode since Spring 5). Always use `WebClient` for new code — it supports both blocking and non-blocking modes. Feign Client internally uses blocking HTTP by default; for reactive Feign, use `spring-cloud-starter-openfeign` with `WebClient`.
+
+**Under the hood:** Synchronous calls create tight coupling — if Service B is down, Service A's request fails. Mitigate with **Circuit Breaker** (Resilience4j), **retry with exponential backoff**, and **fallback methods**:
+```java
+@CircuitBreaker(name = "userService", fallbackMethod = "getUserFallback")
+public User getUser(Long id) {
+    return webClient.get().uri("/users/{id}", id).retrieve().bodyToMono(User.class).block();
+}
+private User getUserFallback(Long id, Throwable t) {
+    return User.defaultUser(); // Cached/default response
+}
+```
 
 ### Q: What is Spring Cloud and how is it useful for building microservices?
-**A:** Spring Cloud is a suite of tools built on top of the Spring framework designed to manage and coordinate microservices. Imagine an online store where different sections (login, shopping cart, payments) are separate microservices. Spring Cloud provides the infrastructure to make them work together seamlessly. It handles cross-cutting concerns like:
-* Service Discovery (connecting the sections).
-* Load Balancing (managing traffic).
-* Centralized Configuration.
-* Distributed Tracing and Security.
+**A:** Spring Cloud provides infrastructure for distributed system patterns:
+
+| Component | Purpose | Implementation |
+|-----------|---------|----------------|
+| **Service Discovery** | Services register and find each other dynamically | Eureka, Consul |
+| **Load Balancing** | Distribute requests across service instances | Spring Cloud LoadBalancer (replaced Ribbon) |
+| **API Gateway** | Single entry point, routing, rate limiting, auth | Spring Cloud Gateway |
+| **Config Server** | Centralized externalized configuration | Spring Cloud Config (Git/Vault backend) |
+| **Circuit Breaker** | Fault tolerance, fallback | Resilience4j (replaced Hystrix) |
+| **Distributed Tracing** | Request tracing across services | Micrometer Tracing + Zipkin (replaced Sleuth) |
+
+> **Spring Cloud Netflix** components (Hystrix, Ribbon, Zuul) are deprecated. Use Resilience4j, Spring Cloud LoadBalancer, and Spring Cloud Gateway respectively.
 
 ---
 
 ## 2. Caching & Performance Optimization
 
 ### Q: Can you explain the caching mechanism available in Spring Boot?
-**A:** Caching is like having a "memory box" for frequently used data so you don't have to repeat expensive operations (like complex database queries) every time. Spring Boot provides a **Cache Abstraction** layer. When you ask for data, Spring checks its cache memory first. If the data is there, it returns it instantly; if not, it performs the expensive operation, returns the result, and stores it in the cache for next time.
+**A:** Spring Boot's cache abstraction provides a **transparent caching layer** via annotations, hiding the cache provider implementation:
+
+```
+┌─────────────────────────────────────────────────────┐
+│  @Cacheable("users")                                │
+│  public User findById(Long id) { ... }              │
+│                                                     │
+│  1. Method called → check cache key (id)            │
+│  2. Cache HIT → return cached value (skip method)   │
+│  3. Cache MISS → execute method → store result      │
+└─────────────────────────────────────────────────────┘
+```
+
+**Cache providers** (pluggable via `spring.cache.type`):
+| Provider | Type | Use Case |
+|----------|------|----------|
+| `ConcurrentMapCache` | In-process, default | Development, single-instance |
+| **Caffeine** | In-process, high-performance | Production single-instance (replaces Guava cache) |
+| **Redis** | Distributed | Multi-instance, shared cache |
+| EhCache | In-process, disk spillover | Large datasets with overflow |
+| Hazelcast | Distributed, embedded | Cluster-wide caching |
 
 ### Q: How would you implement caching in a Spring Boot application?
 **A:**
-1. **Add Dependency:** Add `spring-boot-starter-cache` to your `pom.xml` or `build.gradle`.
-2. **Enable Caching:** Add the `@EnableCaching` annotation to your main Spring Boot application class.
-3. **Cache Data:** Use the `@Cacheable` annotation on specific methods whose results you want to store.
-4. **Customize Behavior:** Use `@CacheEvict` (to remove stale data) and `@CachePut` (to update the cache).
-5. **Choose a Provider:** You can use the default concurrent map-based cache, or integrate robust providers like EhCache, Hazelcast, or Redis.
+1. **Dependency:** `spring-boot-starter-cache` + provider (e.g., `caffeine` or `spring-boot-starter-data-redis`).
+2. **Enable:** `@EnableCaching` on a configuration class.
+3. **Annotate methods:**
 
-### Q: Your Spring Boot application is experiencing performance issues under high load. What steps would you take to identify and address them?
-**A:** 1. **Identify:** Use monitoring tools like **Spring Boot Actuator** or Splunk. Analyze application logs and metrics to spot patterns or errors under load.
-2. **Replicate & Profile:** Start a performance test (e.g., using JMeter) to replicate the issue and use a Java Profiler for code-level analysis to find memory leaks or CPU bottlenecks.
-3. **Optimize:** Based on the findings, I might:
-   * Optimize slow database queries.
-   * Implement caching for frequently accessed data.
-   * Use asynchronous methods (`@Async`) for non-blocking operations.
-   * Implement horizontal scaling and load balancers.
-   * Migrate to reactive programming (Spring WebFlux) if handling massive concurrent connections.
+```java
+@Cacheable(value = "users", key = "#id", unless = "#result == null")
+public User findById(Long id) { return userRepository.findById(id).orElse(null); }
+
+@CachePut(value = "users", key = "#user.id")  // Updates cache without skipping method
+public User updateUser(User user) { return userRepository.save(user); }
+
+@CacheEvict(value = "users", key = "#id")     // Removes from cache
+public void deleteUser(Long id) { userRepository.deleteById(id); }
+
+@CacheEvict(value = "users", allEntries = true) // Flush entire cache
+@Scheduled(fixedRate = 3600000) // Every hour
+public void evictAllUsers() {}
+```
+
+> **Gotcha:** `@Cacheable` methods must be called from **outside the class** — Spring's proxy-based AOP intercepts only external calls. A method calling `this.findById()` bypasses the cache entirely (same self-invocation trap as `@Transactional`).
+
+### Q: Your Spring Boot application is experiencing performance issues under high load. What steps would you take?
+**A:** Systematic debugging approach:
+
+1. **Observe:** Enable Spring Boot Actuator (`/metrics`, `/health`, `/threaddump`). Integrate with **Prometheus + Grafana** for dashboards. Check key metrics:
+   - `jvm.threads.live` — thread pool exhaustion?
+   - `hikaricp.connections.active` — connection pool saturation?
+   - `http.server.requests` (p99 latency) — which endpoints are slow?
+
+2. **Profile:** Use **async-profiler** or **Java Flight Recorder** for CPU/allocation profiling. Thread dump analysis via `jstack` or `jcmd <pid> Thread.print`.
+
+3. **Diagnose common root causes:**
+   - **N+1 queries:** JPA lazy loading triggers individual SELECTs. Fix with `@EntityGraph` or `JOIN FETCH`.
+   - **Connection pool exhaustion:** HikariCP default `maximumPoolSize=10`. If all 10 connections are busy, new requests wait up to `connectionTimeout=30s`. **Size formula:** `connections ≈ ((2 × CPU cores) + number_of_disk_spindles)` — typically 10-20 for most workloads.
+   - **Thread pool saturation:** Tomcat default `threads.max=200`. If all 200 threads block on I/O, no new requests are served.
+   - **GC pauses:** Enable GC logging (`-Xlog:gc*:file=gc.log`), check for long STW pauses.
+
+4. **Fix (prioritized):**
+   - Add database indexes for slow queries.
+   - Enable caching (`@Cacheable` with Redis/Caffeine).
+   - Use `@Async` with custom thread pool for non-blocking I/O.
+   - Optimize JPA fetch strategies.
+   - Scale horizontally if single-instance capacity is maxed.
 
 ---
 
 ## 3. Core Spring Boot Mechanics
 
 ### Q: How does Spring Boot simplify the Data Access Layer implementation?
-**A:** It streamlines data access through several features:
-* **Auto-Configuration:** Automatically sets up `DataSource` and JPA settings based on the libraries in the classpath, removing manual XML/Java configuration.
-* **Spring Data JPA:** Provides built-in repository interfaces (like `JpaRepository`) that automatically implement standard CRUD operations, eliminating boilerplate code.
-* **Database Initialization:** Can automatically execute `schema.sql` and `data.sql` scripts on startup.
-* **Exception Translation:** Translates raw SQL exceptions into Spring's unified `DataAccessException` hierarchy for consistent error handling.
+**A:** Spring Boot eliminates boilerplate through multiple layers:
+
+1. **Auto-Configuration:** Detects database driver on classpath → auto-configures `DataSource`, `EntityManagerFactory`, `TransactionManager`. Zero XML.
+
+2. **Spring Data JPA:** Declare a repository interface — Spring generates the implementation at startup:
+```java
+public interface UserRepository extends JpaRepository<User, Long> {
+    List<User> findByEmailContaining(String domain); // Auto-generated query from method name!
+    
+    @Query("SELECT u FROM User u WHERE u.department = :dept AND u.salary > :min")
+    List<User> findHighEarners(@Param("dept") String dept, @Param("min") BigDecimal min);
+}
+```
+
+3. **Auditing:** `@CreatedDate`, `@LastModifiedDate`, `@CreatedBy` — automatic timestamp/user tracking.
+
+4. **Exception translation:** Raw `SQLSyntaxErrorException` → Spring's `DataAccessException` hierarchy → consistent error handling across JDBC, JPA, MongoDB.
+
+> **Performance trap:** JPA's `findAll()` loads **all rows into memory**. For large tables, always use pagination (`Pageable`) or streaming (`@QueryHints(@QueryHint(name = HINT_FETCH_SIZE, value = "50"))`).
 
 ### Q: What are conditional annotations and their purpose in Spring Boot?
-**A:** Conditional annotations create beans or configurations only if specific conditions are met (e.g., "If condition X is true, instantiate Bean Y"). A common example is `@ConditionalOnClass`, which creates a bean only if a specific class is present on the classpath. This makes Spring Boot highly flexible and adaptable to different environments without changing the core code.
+**A:** The `@Conditional*` family controls bean registration based on runtime conditions:
+
+| Annotation | Condition |
+|------------|-----------|
+| `@ConditionalOnClass(DataSource.class)` | Class exists on classpath |
+| `@ConditionalOnMissingBean(DataSource.class)` | No bean of this type exists |
+| `@ConditionalOnProperty(name = "feature.x", havingValue = "true")` | Property is set to value |
+| `@ConditionalOnWebApplication` | Running as a web app |
+| `@ConditionalOnExpression("#{environment.getProperty('a') != null}")` | SpEL evaluates to true |
+
+This is the core mechanism behind auto-configuration — each auto-config class is wrapped in conditions that check whether the relevant library, bean, or property exists before creating beans.
 
 ### Q: Explain the role of `@EnableAutoConfiguration` and how Spring Boot achieves auto-configuration internally.
-**A:** `@EnableAutoConfiguration` tells Spring Boot to automatically set up the application based on the dependencies present in the classpath. Internally, Spring Boot uses conditional evaluation (leveraging the conditional annotations mentioned above). It examines the classpath, existing beans, and defined properties to smartly determine exactly what to configure, vastly speeding up development.
+**A:** The internal flow:
+
+1. `@EnableAutoConfiguration` triggers `AutoConfigurationImportSelector`.
+2. The selector reads `META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports` (Spring Boot 3.x) or `META-INF/spring.factories` (Spring Boot 2.x).
+3. These files list **all** auto-configuration classes (e.g., `DataSourceAutoConfiguration`, `WebMvcAutoConfiguration`).
+4. Each auto-configuration class is annotated with `@Conditional*` annotations — only matching classes create beans.
+5. The developer's own `@Bean` definitions take **precedence** (via `@ConditionalOnMissingBean`).
+
+> **Spring Boot 3.x migration note:** `spring.factories` for auto-configuration is **deprecated**. Use `AutoConfiguration.imports` file instead.
 
 ### Q: How does Spring Boot make the decision on which embedded server to use?
-**A:** It decides based on classpath dependencies. If `spring-boot-starter-web` is included, it defaults to **Tomcat**. However, if you exclude Tomcat and specifically include dependencies for **Jetty** or **Undertow**, Spring Boot's auto-configuration detects them and configures them as the default server instead.
+**A:** Auto-configuration checks the classpath in order:
+1. `spring-boot-starter-web` → includes Tomcat → `TomcatServletWebServerFactory` bean created.
+2. If Tomcat excluded + Jetty dependency added → `JettyServletWebServerFactory`.
+3. If Undertow dependency added → `UndertowServletWebServerFactory`.
+
+For reactive apps (`spring-boot-starter-webflux`): defaults to **Netty** (event-loop model). Can be switched to Tomcat/Jetty/Undertow.
+
+```xml
+<!-- Switch from Tomcat to Undertow -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-web</artifactId>
+    <exclusions>
+        <exclusion>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+        </exclusion>
+    </exclusions>
+</dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-undertow</artifactId>
+</dependency>
+```
 
 ---
 
 ## 4. Configuration, Profiles, and Actuator
 
 ### Q: What are Spring Boot Actuator endpoints?
-**A:** Actuator is a toolbox for monitoring and managing your application in production. It exposes HTTP endpoints (like `/health`, `/metrics`, `/env`) that allow you to check application health, view configurations, and gather performance metrics. 
+**A:** Actuator provides **production-ready monitoring** endpoints:
 
-### Q: How can we secure the Actuator endpoints? (Since they expose sensitive info)
+| Endpoint | Purpose |
+|----------|---------|
+| `/actuator/health` | Application health (DB, disk, custom indicators) |
+| `/actuator/metrics` | JVM, Tomcat, HikariCP, HTTP request metrics |
+| `/actuator/env` | Environment properties (auto-sanitizes secrets) |
+| `/actuator/threaddump` | Current thread states (equivalent to `jstack`) |
+| `/actuator/heapdump` | Heap dump download (equivalent to `jmap`) |
+| `/actuator/loggers` | View/change log levels at runtime |
+| `/actuator/beans` | All registered beans with dependencies |
+
+**Integration:** Expose metrics to **Prometheus** via `micrometer-registry-prometheus` dependency → scrape at `/actuator/prometheus` → visualize in **Grafana**.
+
+### Q: How can we secure the Actuator endpoints?
 **A:**
-1. **Limit Exposure:** By default, only a few endpoints (like `/health`) are exposed over the web. Explicitly control which endpoints are exposed via application properties.
-2. **Spring Security:** Configure Spring Security to require authentication before accessing actuator URLs.
-3. **Use HTTPS:** Ensure all actuator traffic is encrypted.
-4. **Role-Based Access:** Create a specific role (e.g., `ACTUATOR_ADMIN`) and restrict endpoint access exclusively to users holding that role.
+```yaml
+# 1. Limit exposure (application.yml)
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics, prometheus  # Only these exposed
+  endpoint:
+    health:
+      show-details: when_authorized  # Details only for authenticated users
+
+# 2. Spring Security (SecurityFilterChain bean)
+```
+```java
+@Bean
+SecurityFilterChain actuatorSecurity(HttpSecurity http) throws Exception {
+    return http
+        .securityMatcher("/actuator/**")
+        .authorizeHttpRequests(auth -> auth
+            .requestMatchers("/actuator/health").permitAll()
+            .requestMatchers("/actuator/**").hasRole("ACTUATOR_ADMIN")
+        )
+        .httpBasic(Customizer.withDefaults())
+        .build();
+}
+```
 
 ### Q: What advantages does YAML offer over properties files? Are there limitations?
-**A:** * **Advantages:** YAML supports hierarchical configurations, making it much more readable and easier to manage for complex, deeply nested structures. It also supports inline comments.
-* **Limitations:** It is highly sensitive to spaces and indentation, making it more prone to syntax errors. Some developers also prefer the straightforward key-value format of standard `.properties` files.
+**A:**
+| Aspect | `.properties` | `.yml` |
+|--------|--------------|--------|
+| Nested config | `spring.datasource.url=...` (flat, repetitive prefix) | Hierarchical indentation (DRY) |
+| Multi-document | Separate files per profile | `---` separator in one file |
+| List syntax | `items[0]=a`, `items[1]=b` | `- a`, `- b` |
+| Readability | Simple for flat configs | Better for deep nesting |
+| **Pitfall** | None significant | **Indentation-sensitive** — tabs cause silent failures |
+
+> **Spring Boot convention:** Both can coexist. `.yml` is loaded before `.properties`. Properties override YAML values.
 
 ### Q: Explain how Spring Boot Profiles work and why we use them.
-**A:** Profiles allow you to separate parts of your application configuration and make them available only in certain environments (like "Development", "Testing", or "Production"). You can maintain different database URLs or logging levels for different profiles and switch between them easily without altering your codebase. This keeps the application flexible and maintainable.
+**A:** Profiles enable **environment-specific configuration** without code changes:
+
+```yaml
+# application.yml (default)
+spring:
+  profiles:
+    active: dev  # Or set via: SPRING_PROFILES_ACTIVE=prod
+
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
+  datasource:
+    url: jdbc:h2:mem:testdb
+  jpa:
+    show-sql: true
+
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+  datasource:
+    url: jdbc:postgresql://prod-db:5432/myapp
+  jpa:
+    show-sql: false
+```
+
+Profiles also control bean loading: `@Profile("prod")` on a `@Configuration` class ensures those beans only load in production. **Activation order:** command-line arg > env var > `application.yml` > `@ActiveProfiles` (tests).
 
 ---
 
@@ -102,28 +301,115 @@ This guide covers advanced and tricky Spring Boot interview questions, focusing 
 
 ### Q: What are the best practices for versioning REST APIs in a Spring Boot application?
 **A:**
-1. **URI/URL Versioning:** Including the version in the URL path (e.g., `/api/v1/products`).
-2. **Header Versioning:** Using a custom HTTP header (e.g., `X-API-VERSION: 1`) to specify the version.
-3. **Media Type (Content Negotiation) Versioning:** Using the `Accept` header (e.g., `Accept: application/vnd.mycompany.v1+json`).
-4. **Parameter Versioning:** Specifying the version as a query parameter (e.g., `/api/products?version=1`).
+| Strategy | Example | Pros | Cons |
+|----------|---------|------|------|
+| **URI path** | `/api/v1/users` | Simple, cacheable, most common | URL changes per version |
+| **Header** | `X-API-VERSION: 1` | Clean URLs | Not visible in browser/logs |
+| **Media type** | `Accept: application/vnd.myapp.v1+json` | Precise content negotiation | Complex |
+| **Query param** | `/api/users?version=1` | Easy to switch | Pollutes URL |
+
+> **Recommendation:** URI path versioning is the industry standard (Google, Stripe, GitHub use it). It's transparent, cacheable, and works with API gateways.
 
 ### Q: How can we handle multiple beans of the same type?
-**A:** When multiple candidate beans exist for auto-wiring, Spring throws a `NoUniqueBeanDefinitionException`. You can solve this by:
-* Using the **`@Qualifier("beanName")`** annotation alongside `@Autowired` to specify exactly which bean to inject.
-* Using the **`@Primary`** annotation on one of the bean implementations to mark it as the default choice when no specific qualifier is provided.
+**A:**
+```java
+// 1. @Qualifier — explicit selection
+@Autowired
+@Qualifier("postgresUserRepo")
+private UserRepository userRepo;
+
+// 2. @Primary — default choice when no qualifier specified
+@Primary @Bean
+public UserRepository postgresUserRepo() { return new PostgresUserRepo(); }
+
+// 3. Collection injection — inject ALL beans of a type
+@Autowired
+private List<NotificationSender> senders; // All implementations injected
+```
 
 ### Q: What are some best practices for managing transactions in a Spring Boot application?
-**A:** 1. Use the **`@Transactional`** annotation. It tells Spring to handle the method as a single database transaction, automatically rolling back changes if an exception occurs to prevent partial updates.
-2. **Keep transactions at the Service layer.** The service layer contains the business logic; managing transactions here creates a sweet spot for coordinating multiple repository calls successfully before committing them.
+**A:**
+1. **Use `@Transactional` on the Service layer** — not on Controller or Repository. The service contains business logic that coordinates multiple repository calls.
+
+2. **Understand propagation levels:**
+   | Propagation | Behavior |
+   |-------------|----------|
+   | `REQUIRED` (default) | Join existing TX, or create new |
+   | `REQUIRES_NEW` | Always create new TX, suspend existing |
+   | `NESTED` | Savepoint within existing TX |
+   | `MANDATORY` | Must have existing TX, else exception |
+
+3. **Self-invocation trap:** `@Transactional` is proxy-based. Calling `this.internalMethod()` bypasses the proxy — the transaction annotation is ignored:
+```java
+@Service
+public class OrderService {
+    public void processOrder() {
+        this.saveOrder(); // ❌ Bypasses proxy! @Transactional ignored
+    }
+    @Transactional
+    public void saveOrder() { /* ... */ }
+}
+// Fix: inject self, or extract to separate bean
+```
+
+4. **rollbackFor:** By default, `@Transactional` only rolls back on **unchecked exceptions** (`RuntimeException`). For checked exceptions, explicitly declare: `@Transactional(rollbackFor = Exception.class)`.
 
 ### Q: What is Aspect-Oriented Programming (AOP) in the Spring Framework?
-**A:** AOP is a programming approach that separates cross-cutting concerns from your core business logic. Tasks like logging, security checks, or transaction management often need to happen across multiple methods/classes. Instead of scattering this code everywhere, AOP allows you to define the logic once in an **Aspect** and specify *where* and *when* it should be applied. This keeps the primary business code clean and focused.
+**A:** AOP separates **cross-cutting concerns** from business logic:
 
-### Q: How do you approach testing in a Spring Boot application? Discuss `@SpringBootTest` and `@MockBean`.
-**A:** Testing is divided into two main approaches:
-* **Unit Testing:** Testing small pieces of code (like a single method) in complete isolation.
-* **Integration Testing:** Checking how different parts of the application interact with each other and the Spring context.
+```java
+@Aspect @Component
+public class LoggingAspect {
+    @Around("@annotation(Loggable)")  // Pointcut: methods annotated with @Loggable
+    public Object logExecution(ProceedingJoinPoint joinPoint) throws Throwable {
+        long start = System.currentTimeMillis();
+        Object result = joinPoint.proceed();  // Execute target method
+        long duration = System.currentTimeMillis() - start;
+        log.info("{}.{} executed in {}ms",
+            joinPoint.getTarget().getClass().getSimpleName(),
+            joinPoint.getSignature().getName(), duration);
+        return result;
+    }
+}
+```
 
-**Annotations:**
-* **`@SpringBootTest`:** Used for Integration Testing. It tells Spring to start up the entire application context. It is used when you need to test the full behavior of the application working together.
-* **`@MockBean`:** Used to create a mock version of a component or service. It is highly useful in Unit Tests when you want to isolate the component being tested without involving its actual database or external API dependencies.
+**Under the hood:** Spring creates a **proxy** around the target bean:
+- **JDK Dynamic Proxy** — if the bean implements an interface. Uses `java.lang.reflect.Proxy`.
+- **CGLIB Proxy** — if no interface. Creates a subclass at runtime. Spring Boot defaults to CGLIB (`spring.aop.proxy-target-class=true`).
+
+> **Implication:** `final` classes and `private` methods cannot be proxied by CGLIB — AOP advice won't apply.
+
+### Q: How do you approach testing in a Spring Boot application?
+**A:**
+
+| Layer | Tool | Annotation | Speed |
+|-------|------|------------|-------|
+| Unit test | JUnit 5 + Mockito | None needed | ~ms |
+| Slice test (web) | MockMvc | `@WebMvcTest` | ~1-2s |
+| Slice test (JPA) | TestEntityManager | `@DataJpaTest` | ~2-3s |
+| Integration test | Full context | `@SpringBootTest` | ~5-15s |
+
+```java
+// Unit test — no Spring context needed
+@ExtendWith(MockitoExtension.class)
+class UserServiceTest {
+    @Mock UserRepository userRepository;
+    @InjectMocks UserService userService;
+    
+    @Test
+    void shouldFindUser() {
+        when(userRepository.findById(1L)).thenReturn(Optional.of(new User("Alice")));
+        User result = userService.findById(1L);
+        assertThat(result.getName()).isEqualTo("Alice");
+    }
+}
+
+// Integration test — full context with test DB
+@SpringBootTest
+@Testcontainers
+class UserIntegrationTest {
+    @Container
+    static PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:15");
+    // Tests against real DB in Docker container
+}
+```
